sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * FFI-safe 2D vector representation.
 */
typedef struct FfiVec2 {
    /**
     * X component.
     */
    float x;
    /**
     * Y component.
     */
    float y;
} FfiVec2;
/**
 * FFI-safe Transform2D representation.
 */
typedef struct FfiTransform2D {
    /**
     * Position X in world space.
     */
    float position_x;
    /**
     * Position Y in world space.
     */
    float position_y;
    /**
     * Rotation angle in radians.
     */
    float rotation;
    /**
     * Scale along X axis.
     */
    float scale_x;
    /**
     * Scale along Y axis.
     */
    float scale_y;
} FfiTransform2D;
/**
 * FFI-safe Mat3x3 representation (9 floats in column-major order).
 */
typedef struct FfiMat3x3 {
    /**
     * Matrix elements in column-major order.
     */
    float m[9];
} FfiMat3x3;
/**
 * Returns the forward direction vector (positive X axis after rotation).
 */
struct FfiVec2 goud_transform2d_forward(const struct FfiTransform2D *transform);
/**
 * Returns the right direction vector (positive Y axis after rotation).
 */
struct FfiVec2 goud_transform2d_right(const struct FfiTransform2D *transform);
/**
 * Returns the backward direction vector (negative X axis after rotation).
 */
struct FfiVec2 goud_transform2d_backward(const struct FfiTransform2D *transform);
/**
 * Returns the left direction vector (negative Y axis after rotation).
 */
struct FfiVec2 goud_transform2d_left(const struct FfiTransform2D *transform);
/**
 * Computes the 3x3 transformation matrix.
 */
struct FfiMat3x3 goud_transform2d_matrix(const struct FfiTransform2D *transform);
/**
 * Sets the position of the transform.
 */
void goud_transform2d_set_position(struct FfiTransform2D *transform, float x, float y);
/**
 * Gets the position of the transform.
 */
struct FfiVec2 goud_transform2d_get_position(const struct FfiTransform2D *transform);
/**
 * Rotates the transform by the given angle in radians.
 */
void goud_transform2d_rotate(struct FfiTransform2D *transform, float angle);
/**
 * Rotates the transform by the given angle in degrees.
 */
void goud_transform2d_rotate_degrees(struct FfiTransform2D *transform, float degrees);
/**
 * Sets the rotation angle in radians.
 */
void goud_transform2d_set_rotation(struct FfiTransform2D *transform, float rotation);
/**
 * Sets the rotation angle in degrees.
 */
void goud_transform2d_set_rotation_degrees(struct FfiTransform2D *transform, float degrees);
/**
 * Gets the rotation angle in radians.
 */
float goud_transform2d_get_rotation(const struct FfiTransform2D *transform);
/**
 * Gets the rotation angle in degrees.
 */
float goud_transform2d_get_rotation_degrees(const struct FfiTransform2D *transform);
/**
 * Makes the transform look at a target position.
 */
void goud_transform2d_look_at_target(struct FfiTransform2D *transform, float target_x, float target_y);
/**
 * Sets the scale of the transform.
 */
void goud_transform2d_set_scale(struct FfiTransform2D *transform, float scale_x, float scale_y);
/**
 * Sets uniform scale on both axes.
 */
void goud_transform2d_set_scale_uniform(struct FfiTransform2D *transform, float scale);
/**
 * Gets the scale of the transform.
 */
struct FfiVec2 goud_transform2d_get_scale(const struct FfiTransform2D *transform);
/**
 * Multiplies the current scale by the given factors.
 */
void goud_transform2d_scale_by(struct FfiTransform2D *transform, float factor_x, float factor_y);