sdks/csharp/NativeMethods.g.cs


        /// <summary>
        ///  Sets the position of the transform.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to modify
        ///  - `x`: New X position
        ///  - `y`: New Y position
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_set_position", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_transform2d_set_position(FfiTransform2D* transform, float x, float y);

        /// <summary>
        ///  Gets the position of the transform.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to read
        ///
        ///  # Returns
        ///
        ///  The position as an FfiVec2.
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_get_position", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiVec2 goud_transform2d_get_position(FfiTransform2D* transform);

        /// <summary>
        ///  Rotates the transform by the given angle in radians.
        ///
        ///  The rotation is normalized to [-PI, PI).
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to modify
        ///  - `angle`: Angle to rotate by in radians (counter-clockwise)
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_rotate", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_transform2d_rotate(FfiTransform2D* transform, float angle);

        /// <summary>
        ///  Rotates the transform by the given angle in degrees.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to modify
        ///  - `degrees`: Angle to rotate by in degrees (counter-clockwise)
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_rotate_degrees", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_transform2d_rotate_degrees(FfiTransform2D* transform, float degrees);

        /// <summary>
        ///  Sets the rotation angle in radians.
        ///
        ///  The rotation is normalized to [-PI, PI).
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to modify
        ///  - `rotation`: New rotation angle in radians
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_set_rotation", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_transform2d_set_rotation(FfiTransform2D* transform, float rotation);

        /// <summary>
        ///  Sets the rotation angle in degrees.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to modify
        ///  - `degrees`: New rotation angle in degrees
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_set_rotation_degrees", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_transform2d_set_rotation_degrees(FfiTransform2D* transform, float degrees);

        /// <summary>
        ///  Gets the rotation angle in radians.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to read
        ///
        ///  # Returns
        ///
        ///  The rotation angle in radians.
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_get_rotation", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float goud_transform2d_get_rotation(FfiTransform2D* transform);

        /// <summary>
        ///  Gets the rotation angle in degrees.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to read
        ///
        ///  # Returns
        ///
        ///  The rotation angle in degrees.
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_get_rotation_degrees", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float goud_transform2d_get_rotation_degrees(FfiTransform2D* transform);

        /// <summary>
        ///  Makes the transform look at a target position.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to modify
        ///  - `target_x`: X position of the target
        ///  - `target_y`: Y position of the target
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_look_at_target", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_transform2d_look_at_target(FfiTransform2D* transform, float target_x, float target_y);

        /// <summary>
        ///  Sets the scale of the transform.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to modify
        ///  - `scale_x`: New X scale
        ///  - `scale_y`: New Y scale
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_set_scale", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_transform2d_set_scale(FfiTransform2D* transform, float scale_x, float scale_y);

        /// <summary>
        ///  Sets uniform scale on both axes.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to modify
        ///  - `scale`: Uniform scale factor
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_set_scale_uniform", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_transform2d_set_scale_uniform(FfiTransform2D* transform, float scale);

        /// <summary>
        ///  Gets the scale of the transform.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to read
        ///
        ///  # Returns
        ///
        ///  The scale as an FfiVec2.
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_get_scale", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiVec2 goud_transform2d_get_scale(FfiTransform2D* transform);

        /// <summary>
        ///  Multiplies the current scale by the given factors.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to modify
        ///  - `factor_x`: X scale multiplier
        ///  - `factor_y`: Y scale multiplier
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_scale_by", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_transform2d_scale_by(FfiTransform2D* transform, float factor_x, float factor_y);

        /// <summary>
        ///  Returns the forward direction vector (positive X axis after rotation).
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to read
        ///
        ///  # Returns
        ///
        ///  The forward direction as a unit vector.
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_forward", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiVec2 goud_transform2d_forward(FfiTransform2D* transform);

        /// <summary>
        ///  Returns the right direction vector (positive Y axis after rotation).
        ///
        ///  This is perpendicular to forward, rotated 90 degrees counter-clockwise.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to read
        ///
        ///  # Returns
        ///
        ///  The right direction as a unit vector.
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_right", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiVec2 goud_transform2d_right(FfiTransform2D* transform);

        /// <summary>
        ///  Returns the backward direction vector (negative X axis after rotation).
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_backward", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiVec2 goud_transform2d_backward(FfiTransform2D* transform);

        /// <summary>
        ///  Returns the left direction vector (negative Y axis after rotation).
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_left", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiVec2 goud_transform2d_left(FfiTransform2D* transform);

        /// <summary>
        ///  Computes the 3x3 transformation matrix.
        ///
        ///  The matrix represents Scale * Rotation * Translation.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to read
        ///
        ///  # Returns
        ///
        ///  The transformation matrix in column-major order.
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_matrix", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiMat3x3 goud_transform2d_matrix(FfiTransform2D* transform);
